# HTB-MCP-Client

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  htb_mcp_client.md  htb_mcp_client.py  htb_mcp_state.json  pyproject.toml  requirements.txt  settings.json
.mcp/: .mcp.json.example
doc/: v1.0.0-Class-Diagram.md  v1.0.0-Sequence-Diagram.md
